[package]
name = "safe_pump"
version = "0.2.0"
description = "Raydium CPMM with Token2022 support"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "safe_pump"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["cpi"]
enable-log = []
devnet = []
client = []

[dependencies]
raydium-cp-swap = { path = "./programs/cp-swap" }
anchor-spl = { path = "./anchor/spl", features = ["memo"] }
anchor-lang = { path = "./anchor/lang", features = ["init-if-needed"] }
spl-transfer-hook-interface = { path = "./transfer-hook" }
spl-token-metadata-interface = { path = "./token-metadata" }
spl-token-group-interface = { path = "./token-group" }
spl-tlv-account-resolution = { path = "./spl-type-length-value/tlv-account-resolution", package = "spl-tlv-account-resolution" }
spl-type-length-value = { path = "./spl-type-length-value", package = "spl-type-length-value" }
zeroize = { git = "ssh://git@github.com/hamkj7hpo/utils.git", branch = "safe-pump-compat", version = "1.9.0", features = ["alloc", "zeroize_derive"], optional = true }
spl-pod = { path = "./spl-pod" }
solana-program = { path = "./solana-program", version = "2.1.0" }
solana-zk-sdk = { path = "./solana-zk-sdk/zk-sdk", version = "4.0.0" }
solana-sdk = { path = "./solana-sdk", version = "1.25.0" }
arrayref = { git = "ssh://git@github.com/droundy/arrayref.git", branch = "master" }
bytemuck = { git = "ssh://git@github.com/Lokathor/bytemuck.git", branch = "main", features = ["derive"] }
uint = { git = "ssh://git@github.com/paritytech/parity-common.git", branch = "master" }
bincode = "1.3.3"
spl-math = { version = "0.3.0", path = "./spl-math/libraries/math" }
spl-token = { path = "./solana-program-library/token" }
spl-token-2022 = { path = "./solana-program-library/token-2022" }
sha2 = "0.10.8"
spl-program-error = { path = "./solana-program-library/libraries/program-error" }

[dev-dependencies]
# Empty to avoid transitive conflicts

[profile.dev]
opt-level = 2
split-debuginfo = "unpacked"

[profile.dev.package.curve25519-dalek]
opt-level = 3

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
curve25519-dalek-derive = { path = "./curve25519-dalek-derive" }
curve25519-dalek = { path = "./curve25519-dalek", version = "5.0.0-pre.0" }
x25519-dalek = { path = "./x25519-dalek" }
ed25519-dalek = { path = "./ed25519-dalek" }
solana-program = { path = "./solana-program", version = "2.1.0" }
solana-zk-sdk = { path = "./solana-zk-sdk/zk-sdk", version = "4.0.0" }
solana-sdk = { path = "./solana-sdk", version = "1.25.0" }
spl-math = { version = "0.3.0", path = "./spl-math/libraries/math" }
spl-associated-token-account = { path = "./associated-token-account/program" }
spl-discriminator = { path = "./solana-program-library/libraries/discriminator" }
spl-program-error = { path = "./solana-program-library/libraries/program-error" }
spl-pod = { path = "./spl-pod" }
spl-token = { path = "./solana-program-library/token" }
spl-token-2022 = { path = "./solana-program-library/token-2022" }
spl-token-group-interface = { path = "./token-group" }
spl-token-metadata-interface = { path = "./token-metadata" }
spl-transfer-hook-interface = { path = "./transfer-hook" }

[patch.'ssh://git@github.com/hamkj7hpo/anchor.git']
anchor-spl = { path = "./anchor/spl" }
anchor-lang = { path = "./anchor/lang" }

[patch.'ssh://git@github.com/hamkj7hpo/spl-type-length-value.git']
spl-tlv-account-resolution = { path = "./spl-type-length-value/tlv-account-resolution" }
spl-type-length-value = { path = "./spl-type-length-value" }

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[workspace]
resolver = "2"
members = [
  "solana-program",
  "spl-math/libraries/math",
  "programs/cp-swap",
  "spl-type-length-value",
  "spl-type-length-value/tlv-account-resolution",
  "spl-pod",
  "solana-program-library/token-2022",
]
