[package]
name = "spl-memo"
version = "6.0.0"
description = "Solana Program Library Memo"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/hamkj7hpo/memo"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = { path = "../solana-program", version = "2.1.0" }

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_memo"
path = "program/src/lib.rs"

