[package]
name = "spl-token-2022"
version = "0.5.0"
description = "Solana Program Library Token 2022"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/token-2022"
homepage = "https://solana-program.com"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []

[dependencies]
arrayref = "0.3.9"
bytemuck = { version = "1.22.0", features = ["derive"] }
num-derive = "0.3.3"
num-traits = "0.2.19"
num_enum = "0.5.11"
solana-program = "1.18.26"
solana-zk-token-sdk = "1.18.26"
solana-pubkey = "2.3.0"
spl-pod = "0.1.0"
spl-type-length-value = "0.3.0"
spl-token-group-interface = "0.1.0"
spl-token-metadata-interface = "0.2.0"
spl-tlv-account-resolution = "0.5.1"
spl-transfer-hook-interface = "0.4.1"
spl-memo = "4.0.0"
thiserror = "1.0.69"

[dev-dependencies]
solana-sdk = "1.18.26"
solana-program-test = "1.18.26"
