[package]
name = "solana-zk-sdk"
version = "4.0.0"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/zk-elgamal-proof"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
base64 = "0.22.1"
bincode = "1.3.3"
bytemuck = "1.23.2"
bytemuck_derive = "1.9.3"
curve25519-dalek = { git = "ssh://git@github.com/hamkj7hpo/curve25519-dalek.git", branch = "safe-pump-compat-v2", features = ["digest", "rand_core"] }
getrandom = "0.2"
itertools = "0.12.1"
js-sys = "0.3.77"
merlin = { version = "3", default-features = false }
num-derive = "0.4"
num-traits = "0.2"
rand = "0.8.5"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.142"
sha3 = "0.10.8"
solana-program = { path = "../solana-program" }
solana-sdk = { path = "../solana-sdk" }
subtle = "2.6.1"
thiserror = "2.0.14"
tiny-bip39 = "0.8.2"
wasm-bindgen = "0.2"
zeroize = { git = "ssh://git@github.com/hamkj7hpo/utils.git", branch = "safe-pump-compat", version = "1.9.0" }

[profile.release]
split-debuginfo = "unpacked"
lto = "thin"

[profile.test]
opt-level = 1

[profile.dev.build-override]
opt-level = 1

[profile.dev.package.curve25519-dalek]
opt-level = 3
