[package]
name = "spl-tlv-account-resolution"
version = "0.6.0"
description = "Solana Program Library TLV Account Resolution"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/hamkj7hpo/spl-type-length-value"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = { git = "https://github.com/hamkj7hpo/solana.git", branch = "safe-pump-compat" }
spl-pod = { git = "https://github.com/hamkj7hpo/spl-pod.git", branch = "safe-pump-compat" }
zeroize = { version = "1.3.0", features = ["alloc", "zeroize_derive"], optional = true }
curve25519-dalek = { git = "https://github.com/hamkj7hpo/curve25519-dalek.git", branch = "safe-pump-compat-v2", features = ["std", "serde"] }
bytemuck = { version = "1.18.0", features = ["derive"] }

[features]
zeroize = ["dep:zeroize"]

