[package]
name = "spl-transfer-hook-interface"
version = "0.6.4"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
path = "interface/src/lib.rs"

[dependencies]
solana-program = { path = "../solana-program", version = "2.1.0" }
spl-discriminator = { path = "../solana-program-library/libraries/discriminator" }
spl-pod = { path = "../spl-pod" }
spl-program-error = { path = "../solana-program-library/libraries/program-error" }
bytemuck = { version = "1.18.0", features = ["derive"] }

