[package]
name = "x25519-dalek"
version = "3.0.0-pre.0"
edition = "2024"
authors = [
    "Isis Lovecruft <isis@patternsinthevoid.net>",
    "DebugSteven <debugsteven@gmail.com>",
    "Henry de Valence <hdevalence@hdevalence.ca>",
]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/dalek-cryptography/curve25519-dalek/tree/main/x25519-dalek"
homepage = "https://github.com/dalek-cryptography/curve25519-dalek"
documentation = "https://docs.rs/x25519-dalek"
categories = ["cryptography", "no-std"]
keywords = [
    "cryptography",
    "curve25519",
    "key-exchange",
    "x25519",
    "diffie-hellman",
]
description = "X25519 elliptic curve Diffie-Hellman key exchange in pure-Rust, using curve25519-dalek."
exclude = [".gitignore", ".travis.yml", "CONTRIBUTING.md"]
rust-version = "1.85"

[badges]
travis-ci = { repository = "dalek-cryptography/x25519-dalek", branch = "master" }

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "docs/assets/rustdoc-include-katex-header.html",
    "--cfg",
    "docsrs",
]
features = ["os_rng", "reusable_secrets", "serde", "static_secrets"]

[dependencies]
curve25519-dalek = { version = "=5.0.0-pre.0", default-features = false }
rand_core = { version = "0.9", default-features = false }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
zeroize = { git = "https://github.com/hamkj7hpo/utils.git", branch = "safe-pump-compat-v2", package = "zeroize", optional = true }

[dev-dependencies]
bincode = "1.0"
criterion = { version = "0.5" }
rand_core = { version = "0.9", default-features = false, features = ["os_rng"] }

[[bench]]
name = "x25519"
harness = false

[features]
std = ["alloc", "rand_core/std"]
default = ["alloc", "precomputed-tables"]
alloc = ["curve25519-dalek/alloc", "serde?/alloc", "zeroize?/alloc"]
precomputed-tables = ["curve25519-dalek/precomputed-tables"]
os_rng = ["rand_core/os_rng"]
reusable_secrets = []
static_secrets = []
zeroize = ["dep:zeroize"]
serde = ["dep:serde", "curve25519-dalek/serde"]
