[package]
name = "spl-associated-token-account"
version = "2.2.0"
description = "Solana Program Library Associated Token Account Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/hamkj7hpo/associated-token-account"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
solana-program = { path = "../../solana-program", version = "2.1.0" }
spl-discriminator = { path = "../../solana-program-library/libraries/discriminator" }
spl-program-error = { git = "https://github.com/hamkj7hpo/solana-program-library.git", branch = "safe-pump-compat", package = "spl-program-error" }
assert_matches = "1.5.0"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7"
thiserror = "1.0"
