[package]
name = "raydium-cp-swap"
version = "0.2.0"
description = "Raydium CPMM with Token2022 support"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_cp_swap"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enable-log = []
devnet = []
client = []

[dependencies]
anchor-spl = { path = "../../anchor/spl", features = ["memo"] }
anchor-lang = { path = "../../anchor/lang", features = ["init-if-needed"] }
spl-transfer-hook-interface = { path = "../../transfer-hook" }
spl-token-metadata-interface = { path = "../../token-metadata" }
spl-token-group-interface = { path = "../../token-group" }
spl-tlv-account-resolution = { path = "../../spl-type-length-value/tlv-account-resolution", package = "spl-tlv-account-resolution" }
spl-type-length-value = { path = "../../spl-type-length-value", package = "spl-type-length-value" }
zeroize = { git = "ssh://git@github.com/hamkj7hpo/utils.git", branch = "safe-pump-compat", version = "1.9.0", features = ["alloc", "zeroize_derive"], optional = true }
spl-pod = { path = "../../spl-pod" }
solana-program = { path = "../../solana-program", version = "2.1.0" }
solana-zk-sdk = { path = "../../solana-zk-sdk/zk-sdk", version = "4.0.0" }
arrayref = { git = "ssh://git@github.com/droundy/arrayref.git", branch = "master" }
bytemuck = { git = "ssh://git@github.com/Lokathor/bytemuck.git", branch = "main", features = ["derive"] }
uint = { git = "ssh://git@github.com/paritytech/parity-common.git", branch = "master" }
bincode = "1.3.3"
spl-math = { version = "0.3.0", path = "../../spl-math/libraries/math" }
spl-token-2022 = { path = "../../solana-program-library/token-2022" }
spl-program-error = { path = "../../solana-program-library/libraries/program-error" }

[dev-dependencies]
# Empty to avoid transitive conflicts
