[package]
name = "solana-sdk-macro"
description = "Solana SDK Macro"
documentation = "https://docs.rs/solana-sdk-macro"
version = "1.25.0"
authors = ["Solana Labs Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solana.com"
license = "Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
bs58 = "0.4.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
rustversion = "1.0.10"
syn = { version = "2.0.77", features = ["full", "extra-traits"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
